2011-02-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	libtool: suggest LT_INIT if LTLIBRARIES primary is used
	When the LTLIBRARIES primary was used, but $(LIBTOOL) wasn't
	defined, automake suggested to add a call to AC_PROG_LIBTOOL
	in configure.ac.  But that macro is deprecated since Libtool
	version 1.9b (2004-08-29), in favor of the newer LT_INIT.  So
	suggest the use of this latter macro instead.
	* lib/Automake/Variable.pm (%_am_macro_for_var): Pair 'LIBTOOL'
	with 'LT_INIT', not with 'AC_PROG_LIBTOOL'.
	* libtool4.test: Adjust and extend.  Also, add a call to macro
	AC_PROG_CC in configure.in, to help ensuring that automake does
	not fail for the wrong reasons.
	* ltinit.test: New test, ensure that automake's libtool support
	works with LT_INIT-based interface.
	Thanks to Jack Kelly for the suggestion.

2011-02-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: tempdirs with restrictive permissions are cleaned correctly
	Before this change, the removal of a temporary test directory
	containing subdirectories with restrictive permissions (such as
	'r--r--r--') could fail.
	* tests/defs: Ensure that all the subdirectories of a temporary
	test directory have the 'read', 'write' and 'execute' bits set,
	before trying to remove it with `rm -rf'.
	* tests/Makefile.am (clean-local-check): Likewise.

2011-02-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	test defs: add subroutine for input unindenting
	* tests/defs.in (unindent): New subroutine.

2011-02-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	python: report the 'PYTHON' influential environment variable
	* m4/python.m4 (AM_PATH_PYTHON): Call AC_ARG_VAR on PYTHON.
	* doc/automake.texi (Python): Update and extend.
	* tests/help-python.test: New test.
	* tests/Makefile.am (TESTS): Update.
	* THANKS (Jack Kelly): Update e-mail address.
	Suggestion by Jack Kelly.

2011-02-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
