@@ -1,3 +1,11 @@
+2011-03-01  Peter Rosin  <peda@lysator.liu.se>
+
+	test defs: unindent without temporary file
+	* tests/defs.in (commented_sed_unindent_prog): Commented Sed program
+	that strips the "proper" amount of leading whitespace.
+	(unindent): Lazily strip comments from the above program and use it
+	to unindent without using a temporary file.
+
 2011-02-26  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	libtool: suggest LT_INIT if LTLIBRARIES primary is used
